Bug 1663125 - Fix registered service workers missing after restart and cover it with a marionette test. r=asuth,whimboo, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D90189